# firmware-espressif-esp32

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  partitions.csv  sdkconfig
components/: README.md
components/LIS3DHTR_ESP-IDF/: CMakeLists.txt  README.md  idf_component.yml
components/LIS3DHTR_ESP-IDF/src/: LIS3DHTR.cpp
components/LIS3DHTR_ESP-IDF/src/include/: LIS3DHTR.h
components/esp32-camera/conversions/: to_bmp.c
edge-impulse-sdk/: LICENSE
edge-impulse-sdk/classifier/: ei_classifier_config.h  ei_classifier_types.h  ei_fill_result_struct.h  ei_model_types.h  ei_run_classifier.h  ei_run_dsp.h
edge-impulse-sdk/classifier/inferencing_engines/: akida.h  onnx_tidl.h  tensaiflow.h  tflite_eon.h  tflite_helper.h  tflite_micro.h  tflite_tidl.h
edge-impulse-sdk/dsp/spectral/: feature.hpp
edge-impulse-sdk/dsp/speechpy/: feature.hpp  functions.hpp  processing.hpp
edge-impulse-sdk/porting/posix/: ei_classifier_porting.cpp
edge-impulse-sdk/porting/silabs/: ei_classifier_porting.cpp
edge-impulse-sdk/tensorflow/lite/c/: common.h
edge-impulse-sdk/tensorflow/lite/micro/kernels/: add.cc  conv.cc  depthwise_conv.cc  fully_connected.cc  mli_slicers.cc  mli_slicers.h  mli_tf_utils.h  mul.cc  pooling.cc  scratch_buf_mgr.cc  scratch_buf_mgr.h  scratch_buffers.cc  scratch_buffers.h  softmax.cc
edge-impulse/QCBOR/src/: qcbor_decode.c
edge-impulse/inference/: ei_run_audio_impulse.cpp  ei_run_camera_impulse.cpp  ei_run_fusion_impulse.cpp  ei_run_impulse.h
edge-impulse/ingestion-sdk-c/: ei_sampler.cpp  ei_sampler.h  sensor_aq_mbedtls_hs256.cpp  sensor_aq_mbedtls_hs256.h
edge-impulse/ingestion-sdk-platform/espressif_esp32/: ei_at_handlers.cpp  ei_at_handlers.h  ei_device_espressif_esp32.cpp  ei_device_espressif_esp32.h  ei_wifi_esp32.cpp  ei_wifi_esp32.h  flash_memory.cpp  flash_memory.h
edge-impulse/ingestion-sdk-platform/sensors/: ei_analogsensor.cpp  ei_analogsensor.h  ei_camera.cpp  ei_camera.h  ei_fusion_sensors_config.h  ei_inertial_sensor.cpp  ei_inertial_sensor.h  ei_microphone.cpp  ei_microphone.h
edge-impulse/mbedtls_hmac_sha256_sw/: ei_mbedtls_md.h
firmware-sdk/: CHANGELOG.md  CMakeLists.txt  README.md  at_base64_lib.cpp  at_base64_lib.h  ei_camera_interface.h  ei_config_types.h  ei_device_info_lib.h  ei_device_interface.h  ei_device_lib.cpp  ei_device_lib.h  ei_device_memory.h  ei_fusion.cpp  ei_fusion.h  ei_image_lib.cpp  ei_image_lib.h  ei_image_nn.h  remote-mgmt.cpp  remote-mgmt.h  sensor_aq.cpp  sensor_aq.h  sensor_aq_none.h
firmware-sdk/QCBOR/src/: UsefulBuf.c  qcbor_decode.c  qcbor_encode.c
firmware-sdk/at-server/: ei_at_command_set.cpp  ei_at_command_set.h  ei_at_history.h  ei_at_parser.cpp  ei_at_parser.h  ei_at_server.cpp  ei_at_server.h  ei_at_server_singleton.cpp  ei_line_buffer.h
firmware-sdk/jpeg/: JPEGENC.cpp  JPEGENC.h  encode_as_jpg.h  jpeg.h
firmware-sdk/sensor-aq/: sensor_aq.cpp  sensor_aq.h  sensor_aq_none.cpp  sensor_aq_none.h
firmware-sdk/tools/: README.md  test_inference.py
main/: CMakeLists.txt  main.cpp
model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
tflite-model/: tflite_learn_13_compiled.cpp  tflite_learn_13_compiled.h  tflite_learn_44_13_compiled.cpp  tflite_learn_44_13_compiled.h  tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h  trained_model_compiled.cpp  trained_model_compiled.h  trained_model_ops_define.h
